dropshot/tests/fail/bad_channel6.stderr
error: expected identifier, found `"Oxide"`
  --> tests/fail/bad_channel6.rs:28:19
   |
28 |     let _ = Ret { "Oxide".to_string(), 0x1de };
   |             ---   ^^^^^^^ expected identifier
   |             |
   |             while parsing this struct

error: expected identifier, found `0x1de`
  --> tests/fail/bad_channel6.rs:28:40
   |
28 |     let _ = Ret { "Oxide".to_string(), 0x1de };
   |             ---                        ^^^^^ expected identifier
   |             |
   |             while parsing this struct

error[E0063]: missing fields `x` and `y` in initializer of `Ret`
  --> tests/fail/bad_channel6.rs:28:13
   |
28 |     let _ = Ret { "Oxide".to_string(), 0x1de };
   |             ^^^ missing `x` and `y`
